chore: fine-tune DX

--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "clean:db": "rm royalty.db",
     "dev": "next dev --turbopack",
+    "clean:dev": "npm run clean:db; npm run dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "clean:start": "npm run clean:db; npm run build && npm run start",
+    "lint": "next lint",
+    "test": "jest --watch"
   },
   "dependencies": {
     "react": "19.1.0",
@@ -23,5 +27,8 @@
     "eslint": "^9",
     "eslint-config-next": "15.4.5",
     "@eslint/eslintrc": "^3"
+  },
+  "engines": {
+    "node": "20.x"
   }
 }
