--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test": "jest --watch"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.84.1",
     "better-sqlite3": "^12.2.0",
     "next": "15.4.5",
     "react": "19.1.0",
@@ -21,6 +22,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@tanstack/eslint-plugin-query": "^5.83.1",
     "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^20",
     "@types/react": "^19",
